# HexMage

./: .clang-format  .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  HexMage.filters  HexMage.sln  HexMage.vcxproj  HexMage.vcxproj.filters  Makefile  MyMakefile  TODO.txt  cloc_definitions.txt  conanfile.txt  fragment.glsl  game.cpp  gl_utils.cpp  gl_utils.hpp  imgui.ini  main.cpp  mob.cpp  mob.hpp  model.cpp  sdl_hex_maze.sln  simulation.cpp  stopwatch.hpp  tgaimage.cpp  vertex.glsl
HexMage.Simulator/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  conanfile.txt  main.cpp
HexMage.Simulator/include/: generator.hpp  sim.hpp  utils.hpp
HexMage.Simulator/src/: generator.cpp  main.cpp  sim.cpp
include/: config.hpp  game.hpp  generator.cpp  generator.hpp  gl_utils.hpp  input_manager.hpp  map_geometry.hpp  model.hpp  simulation.hpp  tgaimage.h
include/glad/: glad.h
lib/: freetype263.lib
lib/x86/: freetype263.lib
res/: font.fs.glsl  font.vs.glsl  fragment.glsl  sprite.fs.glsl  vertex.glsl
sdl_hex_maze/: .vimrc  Makefile  PerlinNoise.cpp  PerlinNoise.hpp  ReadMe.txt  fragment.glsl  gl_utils.cpp  gl_utils.hpp  hex_grid.cpp  hex_grid.hpp  main.cpp  mob.cpp  mob.hpp  sdl_hex_maze.vcxproj  sdl_hex_maze.vcxproj.filters  stopwatch.hpp  vertex.glsl
sdl_hex_maze/include/glad/: glad.h
src/: game.cpp  generator.cpp  gl_utils.cpp  glad.c  imgui_impl_sdl.cpp  input_manager.cpp  main.cpp  map_geometry.cpp  model.cpp  simulation.cpp
src/imgui/: imgui_impl_sdl.cpp
